Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerObject.quorum
class Main
    action Main
        Object v
        v:SetValue()
        Test(v)
    end

    action Test(integer var)
    end
end
